--- a/requirements.txt
+++ b/requirements.txt
@@ -10,7 +10,6 @@ httptools==0.5.0
 idna==3.4
 mypy-extensions==0.4.3
 numpy==1.23.5
-pandas==1.5.2
 pathspec==0.10.2
 pbr==5.11.0
 platformdirs==2.5.4
@@ -30,3 +29,6 @@ uvicorn==0.20.0
 uvloop==0.17.0
 watchfiles==0.18.1
 websockets==10.4
+tensorflow==2.12.0
+scikit-learn==1.2.2
+pandas==2.0.1
